@@ -63,6 +63,8 @@ Build
 
 - Issue #3758: Add ``patchcheck`` build target to .PHONY.
 
+- Issue #4204: Fixed module build errors on FreeBSD 4.
+
 C-API
 -----
 
